fix align issues in display field/media queries

--- a/public/stylesheets/_logo.scss
+++ b/public/stylesheets/_logo.scss
@@ -11,7 +11,7 @@
     flex-wrap: nowrap;
 }
 
-@media only screen and (max-width: 870px){
+@media only screen and (max-width: 899px){
    .logo{
         display: none;
     }
