--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -287,7 +287,7 @@ input[type=submit] {
       flex-wrap: nowrap;
 }
 
-@media only screen and (max-width: 870px) {
+@media only screen and (max-width: 899px) {
   .logo {
     display: none;
   }
@@ -481,5 +481,3 @@ input[type=text] {
   }
 }
 /*# sourceMappingURL=styles.css.map */
-
-/* on focus for google bar */
